--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,6 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
-
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: 컴퓨터소프트웨어학과 전문학사
+  uni: 동양미래대학교
+  year: 2023 &mdash; Present
+  
+  summary: Can 전공동아리 부원
