--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,10 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
+- award: 🏆 Best Graduation Project Award
+  organization: University of South Korea  
+  year: 2025 
+  summary: Awarded for the outstanding development of the 2D pixel platformer game as part of my graduation project. The game was recognized for its innovative design and technical execution.
 
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- award: 🏅 Best Team Collaboration Award
+  organization: CAN Club, University of South Korea
+  year: 2024
+  summary: Recognized for exceptional teamwork and leadership during the development of a web-based game project in the CAN Club. The project was completed on time and received high praise from professors.
